--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <div id="root">
       root
     </div>
-    <script src="./index.js"></script>
+    <script src="./index.jsx"></script>
   </body>
 </html>
